Vertical alignment repairs

--- a/blocks/slides/style.css
+++ b/blocks/slides/style.css
@@ -24,7 +24,7 @@
 	justify-content: center;
 	padding: 0;
 	margin: 0;
-	max-width: 120vh;
+	max-width: 130vh;
 }
 
 /* All images but the first. Effectively creates a margin for 2 or more images only. */
